# django-practical-tech-task

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
CVProject/: entrypoint.sh  manage.py
CVProject/CVProject/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
CVProject/main/: context_processors.py  middleware.py  models.py  tasks.py  tests.py  urls.py  urls_api_cv.py  utils.py  views.py
CVProject/main/fixtures/: cv_fixture.json
CVProject/main/migrations/: 0001_initial.py  0002_requestlog.py
CVProject/main/templates/: cv_detail.html  cv_list.html  cv_pdf.html  logs.html  settings.html
